# tabpfn-lean

./: README.md
tabpfn-lean/: Cargo.toml  pyproject.toml
tabpfn-lean/src/: lib.rs
tabpfn-lean/tabpfn_lean/: __init__.py  tabpfn.pyi
tabpfn-lean/tests/: test_layernorm.py  test_mlp.py
tabpfn-rs/: Cargo.toml
tabpfn-rs/src/: activation.rs  encoder_layer.rs  input_encoder.rs  layer_norm.rs  lib.rs  linear.rs  main.rs  mlp.rs  multi_head_attention.rs  safetensors.rs  softmax.rs  transformer.rs
