[package]
name = "tabpfn-lean-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabpfn_lean_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }
tabpfn-rs = {  version = "0.0.1", path = "../tabpfn-rs" }

[features]
abi3 = ["pyo3/abi3-py37", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[workspace]