[project]
name = "tabpfn-lean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mert-kurttutan", email = "kurttutan.mert@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin==1.7"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tabpfn_lean.tabpfn_lean_rs"
profile = "release"