[package]
name = "tabpfn-rs"
version = "0.0.1"
edition = "2024"
authors = ["mert-kurttutan"]
description = "high-performance math functions"
readme = "./README.md"
license = "MIT"
keywords = ["deep-learning", "tabpfn", "tabular-data"]
repository = "https://github.com/mert-kurttutan/tabpfn-rs"

[dependencies]
safetensors = "0.5.2"
memmap2 = "0.9.5"
yoke = { version = "0.7.2", features = ["derive"] }